# GridEngine

./: .gitignore  CMakeLists.txt  GridEngine.sln  GridEngine.vcxproj  GridEngine.vcxproj.filters  README.md  main.cpp  sdl.props
.github/workflows/: CMakeBuild.yml  msbuild.yml
Game/: Game.vcxproj  Game.vcxproj.filters  main.cpp
GridEngine/: Camera.cpp  Camera.h  ColorRGB.h  Effect.cpp  Effect.h  EffectShaded.cpp  EffectShaded.h  EffectTransparent.cpp  EffectTransparent.h  FirstApp.cpp  FirstApp.h  Grid.cpp  Grid.h  GridEngine.vcxproj  GridEngine.vcxproj.filters  Math.h  MathHelpers.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Singleton.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Utils.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  pch.h
GridEngine/Renderer/: GEDevice.cpp  GEDevice.h  GEModel.cpp  GEModel.h  GEPipeline.cpp  GEPipeline.h  GESwapChain.cpp  GESwapChain.h  GEWindow.cpp  GEWindow.h
GridEngine/Shaders/: compile.sh  simple_shader.frag  simple_shader.vert
Props/: d3d_Debug.props  d3d_Release.props
Renderer/: GEWindow.h
Resources/: PosCol3D.fx
source/GridEngine/: FirstApp.cpp
source/GridEngine/Renderer/: GEDevice.cpp  GEModel.h  GEPipeline.cpp  GESwapChain.cpp  GESwapChain.h
